@@ -103,7 +103,9 @@ https://github.com/networkupstools/nut/milestone/11
      `VERSION_DEFAULT` file, among provisions for packager tuning. [#1949]
    * SMF manifests and systemd units now refer to man pages and their online
      variants under `NUT_WEBSITE_BASE` dependent on codebase maturity
-     (development or release snapshot). [issue #722, PR #2733]
+     (development or release snapshot); many programs now display such
+     references in their command-line usage help, method `suggest_doc_links()`
+     was introduced for this purpose. [issue #722, PR #2733]
 
  - the `upsnotify()` common code introduced in recent NUT releases (integrating
    with service management frameworks, etc.) was a bit cryptic when it reported
